--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "start": "expo start --dev-client",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web"
   },
   "dependencies": {
@@ -15,11 +15,14 @@
     "@react-navigation/native-stack": "^7.2.0",
     "axios": "^1.7.9",
     "expo": "~52.0.30",
-    "expo-constants": "~17.0.5",
     "react": "18.3.1",
     "react-native": "0.76.6",
     "react-native-screens": "~4.4.0",
-    "react-native-vector-icons": "^10.2.0"
+    "react-native-vector-icons": "^10.2.0",
+    "expo-status-bar": "~2.0.1"
   },
-  "private": true
+  "private": true,
+  "devDependencies": {
+    "@babel/core": "^7.20.0"
+  }
 }
