--- a/package.json
+++ b/package.json
@@ -15,11 +15,15 @@
     "@react-navigation/native-stack": "^7.2.0",
     "axios": "^1.7.9",
     "expo": "~52.0.30",
+    "expo-status-bar": "~2.0.1",
     "react": "18.3.1",
     "react-native": "0.76.6",
+    "react-native-gesture-handler": "^2.22.1",
+    "react-native-reanimated": "^3.16.7",
+    "react-native-safe-area-context": "^5.2.0",
     "react-native-screens": "~4.4.0",
-    "react-native-vector-icons": "^10.2.0",
-    "expo-status-bar": "~2.0.1"
+    "react-native-svg": "^15.11.1",
+    "react-native-vector-icons": "^10.2.0"
   },
   "private": true,
   "devDependencies": {
