--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "react": "18.3.1",
     "react-native": "0.76.6",
     "react-native-screens": "~4.4.0",
-    "react-native-vector-icons": "^10.2.0"
+    "react-native-vector-icons": "^10.2.0",
+    "@expo/vector-icons": "^14.0.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
