--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
     "@expo/vector-icons": "^14.0.2",
     "@react-native-async-storage/async-storage": "1.23.1",
     "@react-native-community/checkbox": "^0.5.17",
-    "@react-navigation/native": "^7.0.14",
-    "@react-navigation/native-stack": "^7.2.0",
+    "@react-native-picker/picker": "^2.11.0",
+    "@react-navigation/bottom-tabs": "^7.3.1",
+    "@react-navigation/native": "^7.0.17",
+    "@react-navigation/native-stack": "^7.3.1",
     "axios": "^1.7.9",
     "expo": "~52.0.30",
     "expo-blur": "~14.0.3",
@@ -26,6 +28,7 @@
     "react": "18.3.1",
     "react-native": "0.76.6",
     "react-native-elements": "^3.4.3",
+    "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.4.0",
     "react-native-vector-icons": "^10.2.0"
   },
