--- a/package.json
+++ b/package.json
@@ -28,9 +28,11 @@
     "react": "18.3.1",
     "react-native": "0.76.6",
     "react-native-elements": "^3.4.3",
+    "react-native-responsive-screen": "^1.4.2",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.4.0",
-    "react-native-vector-icons": "^10.2.0"
+    "react-native-vector-icons": "^10.2.0",
+    "@shopify/flash-list": "1.7.3"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
